# hubverse-annotator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deptry-check.yaml  format-deptry-check.yaml
hubverse-annotator/: app.py
hubverse_annotator/: anno_2025-04-05.json  anno_['2025-04-05'].json  app.py  ui.py  utils.py
hubverse_annotator/.streamlit/: config.toml
