[project]
name = "hubverse-annotator"
version = "0.0.1"
authors = [
    {name = "Dylan H. Morris", email = "dzl1@cdc.gov"},
    {name = "Damon Bayer", email = "xum8@cdc.gov"},
    {name = "T. M.", email = "upx3@cdc.gov"},
]
description = "Local web application that loads hubverse formatted tables and plots model forecasts, enabling the end user to compare and annotate models."
readme = "README.md"
license = "Apache-2.0"
keywords = ["hubverse", "application", "infectious-disease-modeling", "data-science"]
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "altair==5.5.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "arviz==0.20.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "attrs==25.3.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "blinker==1.9.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "cachetools==5.5.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "certifi==2025.1.31 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "charset-normalizer==3.4.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "click==8.1.8 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.12' and python_full_version < '4.0' and sys_platform == 'win32'",
    "contourpy==1.3.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "cycler==0.12.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "epiweeks==2.3.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "fonttools==4.57.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "forecasttools ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "gitdb==4.0.12 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "gitpython==3.1.44 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "h5netcdf==1.6.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "h5py==3.13.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jax==0.5.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jaxlib==0.5.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jinja2==3.1.6 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jsonschema==4.23.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jsonschema-specifications==2024.10.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "kiwisolver==1.4.8 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "markupsafe==3.0.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "matplotlib==3.10.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "ml-dtypes==0.5.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "multipledispatch==1.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "narwhals==1.34.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "numpy==2.2.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "numpyro==0.17.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "opt-einsum==3.4.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "packaging==24.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pandas==2.2.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pillow==11.1.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "polars==1.27.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "protobuf==5.29.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pyarrow==19.0.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pydeck==0.9.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pyparsing==3.2.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pytz==2025.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "referencing==0.36.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "requests==2.32.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "rpds-py==0.24.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "scipy==1.15.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "setuptools==78.1.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "six==1.17.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "smmap==5.0.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "streamlit==1.44.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tenacity==9.1.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "toml==0.10.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tornado==6.4.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tqdm==4.67.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "typing-extensions==4.13.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tzdata==2025.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "urllib3==2.3.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "watchdog==6.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0' and sys_platform != 'darwin'",
    "xarray==2024.11.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "xarray-einstats==0.8.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
]

[project.urls]
"Repository Issues" = "https://github.com/CDCgov/hubverse-annotator/issues"
"CFA Homepage" = "https://www.cdc.gov/forecast-outbreak-analytics/index.html"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.uv.sources]
forecasttools = { git = "https://github.com/CDCgov/forecasttools-py" }
