[project]
name = "hubverse-annotator"
version = "0.0.1"
authors = [
    {name = "Dylan H. Morris", email = "dzl1@cdc.gov"},
    {name = "Damon Bayer", email = "xum8@cdc.gov"},
    {name = "T. M.", email = "upx3@cdc.gov"},
]
description = "Local web application that loads hubverse formatted tables and plots model forecasts, enabling the end user to compare and annotate models."
readme = "README.md"
license = "Apache-2.0"
keywords = ["hubverse", "application", "infectious-disease-modeling", "data-science"]
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "altair>=5.5.0",
    "forecasttools @ git+https://github.com/cdcgov/forecasttools-py",
    "streamlit>=1.44.1",
    "pyarrow>=19.0.1",
    "polars>=1.30.0",
]

[project.urls]
"Repository Issues" = "https://github.com/CDCgov/hubverse-annotator/issues"
"CFA Homepage" = "https://www.cdc.gov/forecast-outbreak-analytics/index.html"

[tool.ruff.lint.mccabe]
max-complexity = 15
